--- a/tests/soak_test/soak-config.yaml
+++ b/tests/soak_test/soak-config.yaml
@@ -1,8 +1,8 @@
 # Cloud provider information
 cloud_provider:
   aws:
-    access_key: "Access Key Here"
-    secret_access_key: "Secret Access Key Here"
+    access_key: "${AWS_ACCESS_KEY_ID}"
+    secret_access_key: "${AWS_SECRET_ACCESS_KEY}"
     region: us-west-2
     keypair: TestKey
     resource_type: ec2
@@ -17,6 +17,7 @@ cloud_provider:
 # Jobs to be run
 jobs:
   - build
+  - integration_tests
   - k8s_integration_tests
 
 # Wait for instance to come up
