--- a/internal/monitors/cadvisor/metadata.yaml
+++ b/internal/monitors/cadvisor/metadata.yaml
@@ -197,6 +197,14 @@ monitors:
       description: Cumulative count of bytes received
       default: true
       type: cumulative
+    pod_ephemeral_storage_capacity_bytes:
+      description: Represents the storage space available (bytes) for the filesystem
+      default: false
+      type: gauge
+    pod_ephemeral_storage_used_bytes:
+      description: Represents the bytes used on the filesystem
+      default: false
+      type: cumulative
     pod_network_receive_errors_total:
       description: Cumulative count of errors encountered while receiving
       default: true
