--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -12,6 +12,7 @@ pytest-html==1.22
 pytest-rerunfailures==4.1
 pytest-xdist==1.22.0
 pytest==3.6.0
+python-consul==1.1.0
 redis==2.10.6
 requests==2.21.0
 sanic==18.12.0
